@@ -28,7 +28,7 @@
       <a href="mastergli.php?page=Status">Status</a></p>
       <p>Master Server:<br>
       <a href="/loadprofile">Load Profile</a><br>
-      <a href="mastergli.php?page=SaveMasterProfile">Save Profile</a></p>
+      <a href="/saveprofile">Save Profile</a></p>
       </p>
     </td>
     <td valign="top">
