@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.397 2005/09/30 02:06:13 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.398 2005/09/30 04:00:23 agaffney Exp $
 
 *GLI-0.2 (4 Aug 2005)
 
@@ -14,6 +14,8 @@
   client reg via XMLRPC goes into SharedInfo()
   /showclients redesign
   template fixes
+  allow handler functions to add/change headers
+  save profile
 
   28 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/GLIClientsProfiles.py:
